
Changelog
=========

1.3 (unreleased)
----------------
- Map markers are now always set in the order of the itemview's batch list. 

1.2
---

- onegov.ch approved: add badge to readme.
- Makes catalog adaptable for better customization
- Adds maps to items using collective.geo
- Refactors design. Base does no longer hold it's own type.
- Resolves name clash breaking absolute_url()
- Adds french translations

1.1
---

- Adds absolute url to xls export as a read only field

1.0.1
-----

- Makes fulltext search work independently of folder structure
- Fixes an IE7 bug resulting in shrinking input boxes

1.0
---

- Initial release