@@ -161,6 +161,15 @@ class DirectoryItemGeoStyleAdapter(GeoStyleManager, grok.Adapter):
 
 
 class DirectoryItemViewletManager(grok.ViewletManager):
+    """ Shown by default on the item list in the directory view. The viewlet
+    have a local variable named context which is actually just a catalog brain.
+
+    If an object is needed the viewlet itself has to take care of getting it.
+    Though preferrably it won't because the directory might show a lot of
+    items and getObject will therefore slow the site down.
+
+    So it is better to define metadata if they are not too large.
+    """
     grok.context(Interface)
     grok.name('seantis.dir.base.item.viewletmanager')
 
